--- a/src/main/main.form
+++ b/src/main/main.form
@@ -349,6 +349,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="uangBayar">
       <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="uangBayarFocusLost"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="uangBayarActionPerformed"/>
       </Events>
     </Component>
