--- a/src/main/main.form
+++ b/src/main/main.form
@@ -258,6 +258,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="noTransaksi">
       <Events>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="noTransaksiMouseExited"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="noTransaksiActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="noTransaksiKeyTyped"/>
       </Events>
@@ -426,14 +427,17 @@
         <Component class="javax.swing.JTable" name="tabelRental">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="4">
+              <Table columnCount="10" rowCount="4">
                 <Column editable="true" title="Tanggal" type="java.lang.Object"/>
                 <Column editable="true" title="No Transaksi" type="java.lang.Object"/>
                 <Column editable="true" title="No Polisi" type="java.lang.Object"/>
                 <Column editable="true" title="Jenis Kendaraan" type="java.lang.Object"/>
+                <Column editable="true" title="Supir" type="java.lang.Object"/>
                 <Column editable="true" title="Harga Supir" type="java.lang.Object"/>
                 <Column editable="true" title="Lama Sewa" type="java.lang.Object"/>
+                <Column editable="true" title="Total Bayar" type="java.lang.Object"/>
                 <Column editable="true" title="Uang Sewa" type="java.lang.Object"/>
+                <Column editable="true" title="Kembalian" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
